--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-picker",
+  "name": "shijingsh-react-native-picker",
   "version": "4.0.18",
   "description": "Picker",
   "main": "index.js",
